# semi-vibe-driver

./: .clang-format  .gitignore  CHANGES.md  CMakeLists.txt  LAW.md  LICENCE.md  README.md  TODO.md  build.py  run.py  run_tests.py  test_dll.c  test_dll_direct.py  test_dll_load.py
.github/workflows/: build-and-test.yml  release.yml
include/: semi_vibe_comm.h  semi_vibe_device.h  semi_vibe_driver.h  semi_vibe_protocol.h
python/: __init__.py  device.py  driver.py  example.py  server.py  socket_test.py  test_device.py  utils.py
src/: semi_vibe_comm.c  semi_vibe_device.c  semi_vibe_driver.c  semi_vibe_protocol.c
tests/: README.md  __init__.py  test_actuator_doors.py  test_actuator_fan.py  test_actuator_heater.py  test_actuator_led.py  test_actuators.py  test_bad_messages.py  test_basic.py  test_component_status.py  test_device.c  test_error_responses.py  test_fan.py  test_heater.py  test_humidity_sensor.py  test_malformed_messages.py  test_power_down.py  test_runner.py  test_sensor_humidity.py  test_sensor_temperature.py  test_sensors.py  test_temperature_sensor.py  test_template.py  test_utils.py
